--- a/kmc/app/src/main/res/layout/activity_main.xml
+++ b/kmc/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,16 @@
                     android:textColor="#fff"
                     android:textSize="15dp"
                     android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_below="@id/textView1"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Login"
+                    android:textColor="#fff"
+                    android:textSize="15dp"
+                    android:textStyle="bold"/>
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -102,7 +112,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Panchayat Secretary Login"
+                                android:text="Panchayat Secretary"
                                 android:textAlignment="center"
                                 android:textColor="#4606b4"
                                 android:textStyle="bold"
@@ -138,7 +148,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Special Officer Login"
+                                android:text="Special Officer"
                                 android:textAlignment="center"
                                 android:textStyle="bold"
                                 android:textColor="#4606b4"
@@ -174,7 +184,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Section Officer Login"
+                                android:text="Section Officer"
                                 android:textColor="#4606b4"
                                 android:textAlignment="center"
                                 android:textStyle="bold"
@@ -211,7 +221,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="District Collector Login"
+                                android:text="District Collector"
                                 android:textColor="#4606b4"
                                 android:textAlignment="center"
                                 android:textStyle="bold"
