Section Officer Zone created

--- a/kmc/app/src/main/res/layout/activity_pslogin.xml
+++ b/kmc/app/src/main/res/layout/activity_pslogin.xml
@@ -27,7 +27,7 @@ android:layout_margin="10dp">
         android:layout_below="@id/textView2"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Welcome Panchayat Secretary"
+        android:text="Welcome Special Officer"
         android:textColor="@color/design_default_color_primary"
         android:textSize="15dp"
         android:textStyle="bold"/>
