--- a/kmc/app/src/main/res/layout/activity_pszone.xml
+++ b/kmc/app/src/main/res/layout/activity_pszone.xml
@@ -21,7 +21,8 @@
             android:paddingLeft="20dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Panchat Sarpanch"
+            android:layout_gravity="center"
+            android:text="Panchat Secretary"
             android:textColor="#fff"/>
         <Button
             android:layout_width="wrap_content"
@@ -29,6 +30,7 @@
             android:text="+"
             android:id="@+id/addIndividual"
             android:textSize="30dp"
+            android:gravity="center"
             android:onClick="addIndividual"
             />
 
