resolved bugs in adapters

--- a/kmc/app/src/main/res/layout/activity_user_details.xml
+++ b/kmc/app/src/main/res/layout/activity_user_details.xml
@@ -250,7 +250,7 @@
                 android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Edit"
+                android:text="Update"
                 android:layout_below="@id/password"
                 android:onClick="submitButton"
                 android:layout_marginTop="30dp"
