--- a/kmc/app/src/main/res/layout/activity_collector_user_details.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_user_details.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal"
     android:layout_margin="10dp">
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -74,6 +75,10 @@
 
             <TextView
                 android:id="@+id/BankACCNumber"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+            <TextView
+                android:id="@+id/BankIFSC"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
             <TextView
@@ -148,6 +153,15 @@
                 android:enabled="false"
                 style="?attr/materialButtonOutlinedStyle"
                 />
+            <ProgressBar
+                android:id="@+id/pBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingTop="30dp"
+                android:visibility="gone">
+            </ProgressBar>
             <Button
                 android:id="@+id/approve"
                 android:layout_width="match_parent"
