--- a/kmc/app/src/main/res/layout/activity_souser_details.xml
+++ b/kmc/app/src/main/res/layout/activity_souser_details.xml
@@ -79,6 +79,10 @@
                 android:id="@+id/BankACCNumber"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
+            <TextView
+                android:id="@+id/BankIFSC"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
             <TextView
                 android:id="@+id/psUpload"
