--- a/kmc/app/src/main/res/layout/activity_spuser_details.xml
+++ b/kmc/app/src/main/res/layout/activity_spuser_details.xml
@@ -83,6 +83,14 @@
                 android:id="@+id/BankIFSC"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
+            <TextView
+                android:id="@+id/approvalAmount"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+            <TextView
+                android:id="@+id/dbAmount"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
             <TextView
                 android:id="@+id/psUpload"
