--- a/kmc/app/src/main/res/layout/activity_pszone.xml
+++ b/kmc/app/src/main/res/layout/activity_pszone.xml
@@ -15,33 +15,42 @@
         android:weightSum="1"
         tools:ignore="MissingConstraints">
 
+
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
-            android:paddingLeft="20dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
+            android:layout_weight="1"
+            android:paddingLeft="20dp"
             android:text="Panchat Secretary"
-            android:textColor="#fff"/>
+            android:textColor="#fff" />
+
         <Button
+            android:id="@+id/addIndividual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
-            android:id="@+id/addIndividual"
-            android:textSize="30dp"
             android:gravity="center"
             android:onClick="addIndividual"
-            />
+            android:text="+"
+            android:textSize="30dp" />
 
     </LinearLayout>
-    <LinearLayout
+      <LinearLayout
         android:layout_below="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        tools:ignore="MissingConstraints">
-    <androidx.recyclerview.widget.RecyclerView
+        tools:ignore="MissingConstraints"
+          android:orientation="vertical">
+          <ProgressBar
+              android:id="@+id/progressBar"
+              android:indeterminate="true"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"/>
+
+          <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
