--- a/kmc/app/src/main/res/layout/activity_spuser_details.xml
+++ b/kmc/app/src/main/res/layout/activity_spuser_details.xml
@@ -149,6 +149,18 @@
                 android:enabled="false"
                 style="?attr/materialButtonOutlinedStyle"
                 />
+            <Button
+                android:id="@+id/groundImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Grounded Image"
+                android:layout_below="@id/password"
+                android:onClick="groundingImage"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:enabled="false"
+                style="?attr/materialButtonOutlinedStyle"
+                />
 
         </LinearLayout>
     </ScrollView>
