--- a/kmc/app/src/main/res/layout/activity_souser_details.xml
+++ b/kmc/app/src/main/res/layout/activity_souser_details.xml
@@ -111,6 +111,14 @@
                 android:gravity="center"
                 style="?attr/materialButtonOutlinedStyle"
                 />
+            <ProgressBar
+                android:id="@+id/pBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingTop="30dp"
+                android:visibility="gone"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
