--- a/kmc/app/src/main/res/layout/activity_ps_action.xml
+++ b/kmc/app/src/main/res/layout/activity_ps_action.xml
@@ -52,7 +52,20 @@
                     android:textColor="#fff"
                     android:textSize="20dp"
                     android:textStyle="bold"/>
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change Password"
+                    android:id="@+id/changePass"
+                    android:layout_below="@+id/textView2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="36dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="20dp"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:onClick="changePass"
+                    />
                 <GridLayout
                     android:layout_width="375dp"
                     android:layout_height="617dp"
@@ -125,7 +138,6 @@
                             android:layout_marginTop="3dp"
                             android:background="@drawable/badge"
                             android:gravity="center"
-                            android:text="0"
                             android:textColor="@android:color/white"
                             android:textSize="15sp" />
 
@@ -168,7 +180,17 @@
                         android:foreground="?android:attr/selectableItemBackground"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="8dp">
-
+                        <TextView
+                            android:id="@+id/pending2"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="3dp"
+                            android:background="@drawable/badge"
+                            android:gravity="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="15sp" />
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -206,7 +228,17 @@
                         android:foreground="?android:attr/selectableItemBackground"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="8dp">
-
+                        <TextView
+                            android:id="@+id/pending3"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="3dp"
+                            android:background="@drawable/badge"
+                            android:gravity="center"
+                            android:textColor="@android:color/white"
+                            android:textSize="15sp" />
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
